# CS_Capstone

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/entities/: LoanApplicant.py
backend/src/: app.py  cat_en_keys.py  config.py  line_plot.py  model_training.py  predict.py
backend/src/entities/: LoanApplicant.py
backend/visuals/: line_graph.py  line_plot.py
frontend/: index.html  main.cjs  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: FormPage.jsx  LandingPage.jsx  LearnPage.jsx
frontend/src/components/js/: dropdownOptions.js
